kubernetes/argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-httproute
  namespace: argo
spec:
  hostnames:
    - "argo.10.145.85.4.nip.io"
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wf-argo-workflows-server
          port: 2746
          weight: 1
      timeouts:
        request: 300s
