kubernetes/minio-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: argo
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "minio.10.145.85.4.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - name: argo-artifacts-console
          port: 9001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-artifacts
          port: 9000
